apps/matrix/bridges.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp
  namespace: matrix
spec:
  selector:
    app.kubernetes.io/name: whatsapp
  ports:
    - name: http
      port: 29318
      targetPort: 29318
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp
  namespace: matrix
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 100%
  selector:
    matchLabels:
      app.kubernetes.io/name: whatsapp
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/name: whatsapp
    spec:
      securityContext:
        fsGroup: 1337
      containers:
        - name: whatsapp
          image: dock.mau.dev/mautrix/whatsapp:${matrix_whatsapp_image_tag}
          resources:
            requests:
              cpu: ${matrix_bridge_requests_cpu}
              memory: ${matrix_bridge_requests_memory}
            limits:
              cpu: ${matrix_bridge_limits_cpu}
              memory: ${matrix_bridge_limits_memory}
          volumeMounts:
            - name: whatsapp-data
              mountPath: /data
      volumes:
        - name: whatsapp-data
          persistentVolumeClaim:
            claimName: matrix-whatsapp-data
        - name: whatsapp-config
          secret:
            secretName: matrix-whatsapp-config
---
apiVersion: v1
kind: Service
metadata:
  name: telegram
  namespace: matrix
spec:
  selector:
    app.kubernetes.io/name: telegram
  ports:
    - name: http
      port: 29317
      targetPort: 29317
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram
  namespace: matrix
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 100%
  selector:
    matchLabels:
      app.kubernetes.io/name: telegram
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/name: telegram
    spec:
      securityContext:
        fsGroup: 1337
      containers:
        - name: telegram
          image: dock.mau.dev/mautrix/telegram:${matrix_telegram_image_tag}
          resources:
            requests:
              cpu: ${matrix_bridge_requests_cpu}
              memory: ${matrix_bridge_requests_memory}
            limits:
              cpu: ${matrix_bridge_limits_cpu}
              memory: ${matrix_bridge_limits_memory}
          volumeMounts:
            - name: telegram-data
              mountPath: /data
      volumes:
        - name: telegram-data
          persistentVolumeClaim:
            claimName: matrix-telegram-data
        - name: telegram-config
          secret:
            secretName: matrix-telegram-config
---
apiVersion: v1
kind: Service
metadata:
  name: signalbridgeprivate
  namespace: matrix
spec:
  selector:
    app.kubernetes.io/name: signalbridgeprivate
  ports:
    - name: http
      port: 29328
      targetPort: 29328
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalbridgeprivate
  namespace: matrix
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 100%
  selector:
    matchLabels:
      app.kubernetes.io/name: signalbridgeprivate
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/name: signalbridgeprivate
    spec:
      securityContext:
        fsGroup: 1337
      containers:
        - name: signalbridgeprivate
          image: dock.mau.dev/mautrix/signal:${matrix_signal_image_tag}
          resources:
            requests:
              cpu: ${matrix_bridge_requests_cpu}
              memory: ${matrix_bridge_requests_memory}
            limits:
              cpu: ${matrix_bridge_limits_cpu}
              memory: ${matrix_bridge_limits_memory}
          volumeMounts:
            - name: signal-data
              mountPath: /data
            - name: signal-config
              mountPath: /data/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: signal-config
              mountPath: /data/registration.yaml
              subPath: registration.yaml
              readOnly: true
      volumes:
        - name: signal-data
          persistentVolumeClaim:
            claimName: matrix-signal-data
        - name: signal-config
          secret:
            secretName: matrix-signal-config
