apps/matrix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
  namespace: matrix
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: ${matrix_public_hostname}
      http:
        paths:
          - path: /_matrix
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
          - path: /_synapse
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
  tls:
    - secretName: matrix-tls
      hosts:
        - ${matrix_public_hostname}
